
NEW FEATURES

* evaluate() is better at telling if a new plot should render a new page due
  to the new par('page') in R 3.0.2

BUG FIXES

* fixed yihui/knitr#600: when the last expression in the code is a comment,
  the previous incomplete plot was not captured

* the empty plots produced by strwidth(), strheight(), and clip() are no
  longer recorded

Version 0.4.7
------------------------------------------------------------------------------

NEW FEATURES

* added two arguments keep_warning and keep_message in evaluate() so that it
  is possible not to capture warnings or messages now

BUG FIXES

* fixed #25: plots can be correctly recorded under a complex layout now
  (#25, thanks, Jack Tanner and Andy Barbour)

* fixed yihui/knitr#582: evaluate() misclassified some plot changes as "par
  changes" and removed some plots when it should not; now it is better at
  identifying plot changes dur to par() (thanks, Keith Twombley)

Version 0.4.4
------------------------------------------------------------------------------

BUG FIXES

* Perspective plots from `persp()` are captured now (thanks to Harvey Lime
  and Yihui Xie)

* If an error occurs during printing a visible value, evaluate will halt on
  a cryptic error "operator is invalid for atomic vectors" (#26, fixed by
  Yihui Xie)

* If the internal connection was accidentally closed by the user, a more
  informative message will show up (#23)

* Now the graphical device will always try to record graphics by default (when
  new_device = TRUE) (#34)

* Some empty and incomplete plots caused by par() or layout() will be
  filtered out correctly for R 3.0 (#35)

MAINTAINENCE

* Yihui Xie is the new maintainer of this package now

Version 0.4.3
------------------------------------------------------------------------------

NEW FEATURES

* Added `output_handler` argument to `evaluate`. Should be a
  `output_handler` object, which is a list of functions for handling